# Skillstamp

./: .gitignore
backend/: crypto-polyfill.js  package-lock.json  package.json  railway.json  seed.ts
backend/src/: app.module.ts  main.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt-auth.guard.ts
backend/src/blockchain/: blockchain.service.ts
backend/src/challenges/: challenge-completion.entity.ts  challenge.entity.ts  challenges.controller.ts  challenges.module.ts  challenges.service.ts  on-chain-verifier.service.ts  on-chain.controller.ts
backend/src/recommendations/: recommendations.module.ts
backend/src/sbts/: sbt.entity.ts  sbts.controller.ts  sbts.module.ts  sbts.service.ts
backend/src/tasks/: task.entity.ts  tasks.controller.ts  tasks.module.ts  tasks.service.ts
backend/src/users/: user.entity.ts  users.controller.ts  users.service.ts
contracts/: Cargo.toml  setup.sh
contracts/skillstamp-contracts/: Anchor.toml  package-lock.json  package.json
contracts/skillstamp-contracts/programs/skillstamp-challenge/: Cargo.toml  keypair.json
contracts/skillstamp-contracts/programs/skillstamp-challenge/src/: lib.rs
contracts/skillstamp-contracts/programs/skillstamp-escrow/: Cargo.toml  keypair.json
contracts/skillstamp-contracts/programs/skillstamp-escrow/src/: lib.rs
contracts/skillstamp-contracts/programs/skillstamp-sbt/: Cargo.toml  keypair.json
contracts/skillstamp-contracts/programs/skillstamp-sbt/src/: lib.rs
frontend/: README.md  package-lock.json  package.json
frontend/hooks/: useAuth.ts
frontend/lib/: api.ts
frontend/pages/: _app.tsx  dashboard.tsx  employer.tsx  index.tsx
frontend/sbt/: lib.rs
frontend/store/: auth.ts
frontend/styles/: globals.css
(+1 files in other folders)
