[package]
name = "skillstamp-challenge"
version = "0.1.0"
description = "Skillstamp Challenge Registry Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skillstamp_challenge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
