[package]
name = "skillstamp-escrow"
version = "0.1.0"
description = "Skillstamp Task Escrow Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skillstamp_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token"] }
