[package]
name = "skillstamp-sbt"
version = "0.1.0"
description = "Skillstamp SBT Issuance Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "skillstamp_sbt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.0", features = ["token", "associated_token", "metadata"] }
mpl-token-metadata = { version = "=5.1.2-alpha.2" }
